--- a/index.qmd
+++ b/index.qmd
@@ -7,6 +7,8 @@ format:
     css: styles.css
 ---
 
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+
 ## Who I Am
 
 
@@ -122,46 +124,47 @@ format:
 
 <h3>Technical Skills</h3>
 <div class="experience-card">
-<strong>Programming</strong>
-<div class="skill-block office-style">
-  <span class="badge badge-a">Python</span>
-  <span class="badge badge-b">R</span>
-  <span class="badge badge-c">SQL</span>
-  <span class="badge badge-d">Excel</span>
-  <span class="badge badge-e">HTML</span>
-  <span class="badge badge-a">CSS</span>
-  <span class="badge badge-b">ArcGIS</span>
+<div class="skill-section">
+  <h3>Programming</h3>
+  <span class="badge" id="badge-python"><i class="fa-brands fa-python"></i> Python</span>
+  <span class="badge" id="badge-r"><i class="fa-brands fa-r-project"></i> R</span>
+  <span class="badge" id="badge-sql"><i class="fa-solid fa-database"></i> SQL</span>
+  <span class="badge" id="badge-excel"><i class="fa-solid fa-file-excel"></i> Excel</span>
+  <span class="badge" id="badge-html"><i class="fa-solid fa-code"></i> HTML</span>
+  <span class="badge" id="badge-css"><i class="fa-brands fa-css3-alt"></i> CSS</span>
+  <span class="badge" id="badge-arcgis"><i class="fa-solid fa-earth-americas"></i> ArcGIS</span>
 </div>
 </div>
 
 <div class="experience-card">
-<strong>Data Analysis</strong>
-<div class="skill-block office-style">
-  <span class="badge badge-a">Machine Learning</span>
-  <span class="badge badge-b">Predictive/Time-Series Modeling</span>
-  <span class="badge badge-c">Linear Algebra</span>
-  <span class="badge badge-d">Linear Optimization</span>
+<div class="skill-section">
+  <h3>Data Analysis</h3>
+  <span class="badge" id="badge-machine-learning"><i class="fa-solid fa-robot"></i> Machine Learning</span>
+  <span class="badge" id="badge-predictive"><i class="fa-solid fa-chart-line"></i> Predictive/Time-Series Modeling</span>
+  <span class="badge" id="badge-linear-algebra"><i class="fa-solid fa-square-root-variable"></i> Linear Algebra</span>
+  <span class="badge" id="badge-linear-optimization"><i class="fa-solid fa-sliders"></i> Linear Optimization</span>
 </div>
 </div>
 
 <div class="experience-card">
-<strong>Visualization</strong>
-<div class="skill-block office-style">
-  <span class="badge badge-a">RStudio</span>
-  <span class="badge badge-b">Tableau</span>
-  <span class="badge badge-c">Canva</span>
-  <span class="badge badge-d">Dashboarding</span>
+<div class="skill-section">
+  <h3>Visualization</h3>
+  <span class="badge" id="badge-rstudio"><i class="fa-brands fa-r-project"></i> RStudio</span>
+  <span class="badge" id="badge-tableau"><img src="/assets/icons/tableau.svg" alt="Tableau" class="icon"> Tableau</span>
+  <span class="badge" id="badge-canva"><img src="/assets/icons/canva.svg" alt="Canva" class="icon"> Canva</span>
+  <span class="badge" id="badge-dashboarding"><i class="fa-solid fa-table-columns"></i> Dashboarding</span>
 </div>
 </div>
 
 <div class="experience-card">
-<strong>Other</strong>
-<div class="skill-block office-style">
-  <span class="badge badge-a">Microsoft Office</span>
-  <span class="badge badge-b">eCommerce</span>
-  <span class="badge badge-c">WordPress</span>
-  <span class="badge badge-d">Shopify</span>
-  <span class="badge badge-e">SEO Marketing</span>
+<div class="skill-section">
+  <h3>Other</h3>
+  <span class="badge" id="badge" id="badge-office"><i class="fa-brands fa-microsoft"></i> Microsoft Office</span>
+  <span class="badge" id="badge-ecommerce"><img src="/assets/icons/ecommerce.svg" alt="eCommerce" class="icon"> eCommerce</span>
+  <span class="badge" id="badge-wordpress"><i class="fa-brands fa-wordpress"></i> WordPress</span>
+  <span class="badge" id="badge-shopify"><img src="/assets/icons/shopify.svg" alt="Shopify" class="icon"> Shopify</span>
+  <span class="badge" id="badge-seo"><img src="/assets/icons/seo.svg" alt="SEO Marketing" class="icon"> SEO Marketing</span>
+</div>
 </div>
 </div>
 <hr style="width:25%;text-align:center;margin-left:37.5%">
