--- a/projects.qmd
+++ b/projects.qmd
@@ -5,6 +5,75 @@ format:
     page-layout: full
 ---
 
+## Work Projects
+
+<div class="grid">
+
+<div class="project-card">
+  <a href="projects/murrays-chicken-digital-marketing/index.html" class="project-card-link">
+    <img src="projects/murrays-chicken-digital-marketing/murrays-chicken-digital-marketing.jpg" alt="Murray's Chicken Digital Marketing">
+    <h3>Murray's Chicken Digital Marketing</h3>
+  </a>
+</div>
+
+<div class="project-card">
+  <a href="projects/commodity-cost-impacts/index.html" class="project-card-link">
+    <img src="projects/commodity-cost-impacts/commodity-cost-impacts.jpg" alt="Commodity Cost Impacts">
+    <h3>Commodity Cost Impacts Model</h3>
+  </a>
+</div>
+
+<div class="project-card">
+  <a href="projects/ulster-county-climate-dashboards/index.html" class="project-card-link">
+    <img src="projects/ulster-county-climate-dashboards/ulster-county-climate-dashboards.jpg" alt="Ulster County Climate Dashboards">
+    <h3>Ulster County Climate Dashboards</h3>
+  </a>
+</div>
+
+</div>
+
+## Independent Projects
+
+<div class="grid">
+
+<div class="project-card">
+  <a href="projects/prop-rep/index.html"  class="project-card-link">
+    <img src="projects/prop-rep/prop-rep.jpg" alt="Prop Rep">
+    <h3>The Case for Proportional Representation in America</h3>
+  </a>
+</div>
+
+<div class="project-card">
+  <a href="projects/spotify/index.html" class="project-card-link">
+    <img src="projects/spotify/spotify.jpg" alt="IndieScore Calculator">
+    <h3>IndieScore Calculator</h3>
+  </a>
+</div>
+
+<div class="project-card">
+  <a href="projects/matthew-koplik-photography/index.html" class="project-card-link">
+    <img src="projects/matthew-koplik-photography/matthew-koplik-photography.jpg" alt="Matthew Koplik Photography Site">
+    <h3>Matthew Koplik Photography Site</h3>
+  </a>
+</div>
+
+<div class="project-card">
+  <a href="projects/how-zohran-won/index.html" class="project-card-link">
+    <img src="projects/how-zohran-won/how-zohran-won.jpg" alt="How Zohran Won">
+    <h3>How Zohran Won</h3>
+  </a>
+</div>
+
+<div class="project-card">
+  <a href="projects/nfl-zone-coverage/index.html" class="project-card-link">
+    <img src="projects/nfl-zone-coverage/nfl-zone-coverage.jpg" alt="NFL Zone Coverage Study">
+    <h3>NFL Zone Coverage Study</h3>
+  </a>
+</div>
+
+</div>
+
+
 ## Academic Projects
 
 <div class="grid">
@@ -48,67 +117,6 @@ format:
   <a href="projects/land-cover/index.html" class="project-card-link">
     <img src="projects/land-cover/land-cover.jpg" alt="Land Cover Change">
     <h3>Land Cover Change in the Kolyma Region</h3>
-  </a>
-</div>
-
-</div>
-
-## Work Projects
-
-<div class="grid">
-
-<div class="project-card">
-  <a href="projects/murrays-chicken-digital-marketing/index.html" class="project-card-link">
-    <img src="projects/murrays-chicken-digital-marketing/murrays-chicken-digital-marketing.jpg" alt="Murray's Chicken Digital Marketing">
-    <h3>Murray's Chicken Digital Marketing</h3>
-  </a>
-</div>
-
-<div class="project-card">
-  <a href="projects/commodity-cost-impacts/index.html" class="project-card-link">
-    <img src="projects/commodity-cost-impacts/commodity-cost-impacts.jpg" alt="Commodity Cost Impacts">
-    <h3>Commodity Cost Impacts Model</h3>
-  </a>
-</div>
-
-<div class="project-card">
-  <a href="projects/ulster-county-climate-dashboards/index.html" class="project-card-link">
-    <img src="projects/ulster-county-climate-dashboards/ulster-county-climate-dashboards.jpg" alt="Ulster County Climate Dashboards">
-    <h3>Ulster County Climate Dashboards</h3>
-  </a>
-</div>
-
-</div>
-
-## Independent Projects
-
-<div class="grid">
-
-<div class="project-card">
-  <a href="projects/spotify/index.html" class="project-card-link">
-    <img src="projects/spotify/spotify.jpg" alt="IndieScore Calculator">
-    <h3>IndieScore Calculator</h3>
-  </a>
-</div>
-
-<div class="project-card">
-  <a href="projects/matthew-koplik-photography/index.html" class="project-card-link">
-    <img src="projects/matthew-koplik-photography/matthew-koplik-photography.jpg" alt="Matthew Koplik Photography Site">
-    <h3>Matthew Koplik Photography Site</h3>
-  </a>
-</div>
-
-<div class="project-card">
-  <a href="projects/how-zohran-won/index.html" class="project-card-link">
-    <img src="projects/how-zohran-won/how-zohran-won.jpg" alt="How Zohran Won">
-    <h3>How Zohran Won</h3>
-  </a>
-</div>
-
-<div class="project-card">
-  <a href="projects/nfl-zone-coverage/index.html" class="project-card-link">
-    <img src="projects/nfl-zone-coverage/nfl-zone-coverage.jpg" alt="NFL Zone Coverage Study">
-    <h3>NFL Zone Coverage Study</h3>
   </a>
 </div>
 
